--- a/notebooks/Alphabet - Figure.ipynb
+++ b/notebooks/Alphabet - Figure.ipynb
@@ -534,9 +534,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pytorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
